# BioInformatics

./: CMakeLists.txt  README.md  main.cpp  suffArray.h
AdditivePhylogeny/: additive_phylogeny.h
AdditivePhylogeny/inputs/: input_1.txt
AlignTwoStringsUsingAffineGapPenalty/: align.h
AlignTwoStringsUsingAffineGapPenalty/inputs/: input_5.txt  rosalind_ba5j.txt
AllApproximateOccurrences/: multiple_approximate_pattern_matching.h
AllApproximateOccurrences/inputs/: rosalind_ba9o.txt
Baum-Welch/: baum-welch.h
Baum-Welch/inputs/: input_1.txt
LongestRepeat/: longest_repeat.h
LongestRepeat/inputs/: input_1.txt
MedianString/: median_string.h
MedianString/inputs/: input_1.txt
PairedComposition/: paired_composition.h
PairedComposition/inputs/: input_3.txt
RandomizedMotifSearch/: motif_search.h
RandomizedMotifSearch/inputs/: input_1.txt
SuffixArray/: suffix_array.h
SuffixArray/inputs/: input_1.txt
TwoBreakSortingProblem/: twoBreakSortingProblem.h
TwoBreakSortingProblem/inputs/: input_1.txt
ViterbiAlgorithm/: viterbi.h
ViterbiAlgorithm/inputs/: input_3.txt
